@@ -1,3 +1,8 @@
+2009-05-20  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86/pentium4/sse2/mod_1_4.asm: New file.
+	* mpn/x86/p6/sse2/mod_1_4.asm: New file (grabbing pentium4 code).
+
 2009-05-18  Torbjorn Granlund  <tege@gmplib.org>
 
 	* gmp-h.in (__GNU_MP_VERSION_MINOR): Bump to 4.
